# cubegame

./: .gitignore  Justfile  Makefile  meson.build
assets/shaders/: fragment.glsl  gizmo_frag.glsl  shadow_frag.glsl  shadow_vert.glsl  ui_frag.glsl  ui_vert.glsl  unlit_frag.glsl  vertex.glsl  world_frag.glsl  world_vert.glsl
include/: assets.h  camera.h  config.h  game.h  glm_extra.h  globals.h  lighting.h  log.h  mesh.h  physics.h  player.h  saves.h  shader.h  types.h  ui.h  utils.h  world.h
src/: assets.c  camera.c  game.c  globals.c  lighting.c  log.c  main.c  mesh.c  physics.c  player.c  saves.c  shader.c  ui.c  utils.c  world.c
subprojects/: cglm.wrap  cimgui.wrap
subprojects/packagefiles/: cimgui-glfw-opengl3.patch
